// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notification renders correctly with a dismiss button 1`] = `
.c0 {
  background: #fff;
  border-left: 0.8rem solid #000;
  color: #000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-size: 1.4rem;
  padding: 1rem;
  max-height: 6.8rem;
}

.c0.dismissed {
  opacity: 0;
  max-height: 0;
  overflow: hidden;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  padding: 0;
}

.c0 button {
  border: none;
  background: transparent;
  font-size: 2.4rem;
  color: #000;
  padding: 0;
  line-height: 0;
  margin-right: 1.4rem;
}

<div>
  <div
    aria-hidden="false"
    class="c0"
    color="#000"
    data-testid="notification"
  >
    <span>
      This is a notification
    </span>
    <button
      aria-label="Dismiss notification"
      data-testid="dismiss-button"
    >
      ×
    </button>
  </div>
</div>
`;

exports[`Notification renders correctly without a dismiss button 1`] = `
.c0 {
  background: #fff;
  border-left: 0.8rem solid #000;
  color: #000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-size: 1.4rem;
  padding: 1rem;
  max-height: 6.8rem;
}

.c0.dismissed {
  opacity: 0;
  max-height: 0;
  overflow: hidden;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  padding: 0;
}

.c0 button {
  border: none;
  background: transparent;
  font-size: 2.4rem;
  color: #000;
  padding: 0;
  line-height: 0;
  margin-right: 1.4rem;
}

<div>
  <div
    aria-hidden="false"
    class="c0"
    color="#000"
    data-testid="notification"
  >
    <span>
      This is a non dismissable notification
    </span>
  </div>
</div>
`;
